added google fonts to the styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+/* Google fonts */
+@import url("https://fonts.googleapis.com/css2?family=Oxygen+Mono&family=Oxygen:wght@300;400;700&display=swap");
+
 /* Variables: colors and fonts */
 :root {
   --black: #171321;
