--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Google fonts */
-@import url("https://fonts.googleapis.com/css2?family=Oxygen+Mono&family=Oxygen:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap");
 
 /* Variables: colors and fonts */
 :root {
@@ -25,7 +25,7 @@ html {
   box-sizing: inherit;
 }
 
-/* generic styles for the page */
+/* Generic styles for the page */
 body {
   padding: 0;
   margin: 0;
@@ -37,4 +37,36 @@ body {
 h1,
 h2,
 h3 {
+  margin: 0;
+}
+
+a {
+  color: var(--magenta);
+}
+
+a:hover {
+  color: var(--hotmag);
+  text-decoration: none;
+}
+
+/* Intro styles */
+#intro {
+  padding: 10rem;
+}
+#intro p {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+#intro .name {
+  font-family: var(--mono);
+}
+
+.name span {
+  font-family: var(--sans);
+  font-size: 4rem;
+  color: var(--aqua);
+  display: block;
+}
+#intro h2 {
+  font-size: 4rem;
 }
