--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,43 @@ a:hover {
 #contact p:last-child {
   margin-top: 3rem;
 }
+
+/* Navbar styles */
+nav {
+  font-family: var(--mono);
+  font-size: 80%;
+  padding: 1rem;
+}
+nav h1 a {
+  font-family: var(--sans);
+}
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+nav li:first-child {
+  flex-basis: 100%;
+  text-align: center;
+}
+
+nav a {
+  text-decoration: none;
+  color: var(--white);
+  display: block;
+}
+nav a:hover {
+  color: var(--magenta);
+}
+nav li {
+  display: inline-block;
+}
+
+/* * {
+  outline: red 1px solid;
+} */
