--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,10 @@ nav li:first-child {
   text-align: center;
 }
 
+nav [class*="fa-"] {
+  font-size: 150%;
+  color: var(--aqua);
+}
 nav a {
   text-decoration: none;
   color: var(--white);
