made the navbar responsive

--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,19 @@ nav a.button:hover {
   transform: scale(1.05);
 }
 
+@media (min-width: 850px) {
+  nav {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  nav li:first-child {
+    flex-basis: auto;
+    text-align: left;
+    margin-right: auto;
+  }
+}
+
 /* * {
   outline: red 1px solid;
 } */
