added styling for the foooter

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,29 @@ nav a.button:hover {
   }
 }
 
+/* Footer styles */
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem 0;
+  gap: 1.2rem;
+}
+
+footer ul {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 2rem 0;
+  gap: 3rem;
+  list-style-type: none;
+  padding: 0;
+}
+
+footer [class*="fa-"] {
+  font-size: 3rem;
+}
+
 /* * {
   outline: red 1px solid;
 } */
