--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,15 @@ a:hover {
   );
 }
 
+/* project colours */
+.section-dkblue {
+  background: var(--dkblue);
+}
+
+.section-plum {
+  background: var(--plum);
+}
+
 /* Intro styles */
 #intro {
   padding: 4rem 1rem 10rem 1rem;
@@ -84,14 +93,13 @@ a:hover {
 }
 
 /* Contact styles */
+
 #contact {
-  background: var(--plum);
-}
-#contact .contact-container {
   text-align: center;
   width: 400px;
   margin: 0 auto;
   padding: 3rem 0;
+  line-height: 1.4;
 }
 
 #contact a.button {
@@ -209,6 +217,54 @@ footer p {
 }
 
 /* Project Section Styles */
+
+#projects {
+  padding: 4rem 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+#projects h2 {
+  font-size: 2.5rem;
+  margin-bottom: calc(2.5rem * 1.5);
+}
+#projects h3 {
+  color: var(--aqua);
+}
+
+#projects h4 {
+  font-size: 1rem;
+  font-family: var(--mono);
+  margin: 0;
+}
+
+.black-box {
+  background: var(--black);
+  padding: 1rem;
+  border-radius: 10px;
+  color: var(--white);
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+#projects ul {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1rem;
+  list-style-type: none;
+  justify-content: start;
+  font-size: 1rem;
+}
+
+#projects img {
+  margin: 2rem 0 4rem 0;
+  border-left: 1px solid var(--aqua);
+  border-top: 1px solid var(--aqua);
+  padding: 1rem;
+  border-radius: 25px;
+}
 
 /* Media queries */
 @media (min-width: 850px) {
