added extra div container for the text to be able to apply grid property on the article element. Also added generic width for img on the project to make it responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,10 @@ a:hover {
   );
 }
 
+img {
+  width: 100%;
+}
+
 /* project colours */
 .section-dkblue {
   background: var(--dkblue);
@@ -264,6 +268,13 @@ footer p {
   border-top: 1px solid var(--aqua);
   padding: 1rem;
   border-radius: 25px;
+}
+
+@media (min-width: 550px) {
+  #projects article {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 /* Media queries */
