--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,25 @@ footer p {
 @media (min-width: 550px) {
   #projects article {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: 1fr;
+    gap: 1rem;
+  }
+
+  #projects img {
+    grid-column: 1/6;
+    grid-row: 1/2;
+  }
+
+  .text-container {
+    grid-column: 5/11;
+    grid-row: 1/2;
+    margin-top: 2rem;
+    order: 2;
+    text-align: right;
+  }
+  #projects ul {
+    justify-content: end;
   }
 }
 
