--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,10 @@ img {
   width: 100%;
 }
 
+.pb-medium {
+  padding-bottom: 20px;
+}
+
 /* project colours */
 .section-dkblue {
   background: var(--dkblue);
@@ -180,9 +184,14 @@ nav li {
   padding: 0.5rem;
   border-radius: 5px;
 }
-nav a.button:hover {
+nav a.button:hover,
+a.button:hover {
   color: var(--white);
   background: var(--hotmag);
+  transform: scale(1.05);
+}
+
+.profile-links li:hover {
   transform: scale(1.05);
 }
 
@@ -273,6 +282,11 @@ footer p {
   border-top: 1px solid var(--aqua);
   padding: 1rem;
   border-radius: 25px;
+}
+
+.profile-links a {
+  text-decoration: none;
+  color: white;
 }
 
 @media (min-width: 550px) {
